--- a/django_project/templates/treasure/add_hub.html
+++ b/django_project/templates/treasure/add_hub.html
@@ -12,7 +12,7 @@
     <h2>Add a Hub</h2>
     <br/>
     <div class="container">
-        <form class="span6" id="upload_form" method="post" action="/treasure/add_hub/">
+        <form class="span6" id="upload_form" method="post" action="/add_hub/">
 	
 	    {% csrf_token %}
 	    
