--- a/django_project/templates/treasure/add_school.html
+++ b/django_project/templates/treasure/add_school.html
@@ -13,7 +13,7 @@
     <h2>Add a School</h2>
     <br/>
     <div class="container">
-        <form class="span6" id="upload_form" method="post" action="/treasure/add_school/">
+        <form class="span6" id="upload_form" method="post" action="/add_school/">
 	
 	    {% csrf_token %}
 	    
