--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -42,32 +42,32 @@
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                    </button>
-                   <a href="/treasure/"><img class="brand"  src="{% static 'images/logo2.png' %}"></img></a>
+                   <a href="/"><img class="brand"  src="{% static 'images/logo2.png' %}"></img></a>
 
 				
                    <div class="nav-collapse collapse">
                        <ul class="nav pull-right">
                             {% if user.is_authenticated %}
-                                <li><a href="/treasure/profile">Profile</a></li> 
-                            	<li><a href="/treasure/logout">Logout</a></li>
+                                <li><a href="/profile">Profile</a></li> 
+                            	<li><a href="/logout">Logout</a></li>
                             {% else %}
-                            	<li><a href="/treasure/login">Login</a></li>
-                              <li><a href="/treasure/register">Register</a></li>
-                              <li><a href="/treasure/auth/login/google-oauth2/?next=/">Login with Google</a></li>   
+                            	<li><a href="/login">Login</a></li>
+                              <li><a href="/register">Register</a></li>
+                              <li><a href="/auth/login/google-oauth2/?next=/">Login with Google</a></li>   
                             {% endif %}                   
                        </ul>
                        <ul class="nav">
                        {% if user.is_authenticated %}
-                           <li id="searchbar-container"><form type='get' class="navbar-search pull-left" action="/treasure/resources/">
+                           <li id="searchbar-container"><form type='get' class="navbar-search pull-left" action="/resources/">
 						 		<input id='search' name='search' class="search-query span2" placeholder="Quick Search" type="text">
 						   </form>                       
                            </li>
-                           <li><a href="/treasure/explore">Explore</a></li>
-                           <li><a href="/treasure/resources">Resources</a></li>
-                           <li><a href="/treasure/packs">Packs</a></li>
-                           <li><a href="/treasure/tags">Tags</a></li>
+                           <li><a href="/explore">Explore</a></li>
+                           <li><a href="/resources">Resources</a></li>
+                           <li><a href="/packs">Packs</a></li>
+                           <li><a href="/tags">Tags</a></li>
                        {% endif %}
-                           <li><a href="/treasure/about">About</a></li>
+                           <li><a href="/about">About</a></li>
                        </ul>
                    </div>
                    <!--/.nav-collapse -->
@@ -87,7 +87,7 @@
 							<div id="logo">
 								<span class="image avatar48"><img src="{% static 'images/avatar.jpg' %}" alt="user avatar" /></span>
 								<h1 id="title">{{ user_teacher.firstname }} {{ user_teacher.surname }}</h1>
-								<p>{{ school }}{% ifequal school 'No School' %}, <a href="/treasure/profile/edit/">Add?</a>{% endifequal%}</p>
+								<p>{{ school }}{% ifequal school 'No School' %}, <a href="/profile/edit/">Add?</a>{% endifequal%}</p>
 							</div>
 	                   {% endif %}
 
@@ -95,16 +95,16 @@
                         <nav id="nav">
 							<ul>
 								{% if user.is_authenticated %}
-									<li><a href="/treasure/me/#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
-									<li><a href="/treasure/me/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
-                                    <li><a href="/treasure/me/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
-									<li><a href="/treasure/profile/" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
-									<li><a href="/treasure/contribution/" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
-									<li><a href="/treasure/help/" class="skel-layers-ignoreHref"><span>Help</span></a></li>
+									<li><a href="/me/#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
+									<li><a href="/me/#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
+                                    <li><a href="/me/#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
+									<li><a href="/profile/" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
+									<li><a href="/contribution/" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
+									<li><a href="/help/" class="skel-layers-ignoreHref"><span>Help</span></a></li>
 								{% else %}									
-									<li><a href="/treasure/login/" class="skel-layers-ignoreHref"><span>Login</span></a></li>
-									<li><a href="/treasure/register/" class="skel-layers-ignoreHref"><span>Register</span></a></li>
-                                    <li><a href="/treasure/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
+									<li><a href="/login/" class="skel-layers-ignoreHref"><span>Login</span></a></li>
+									<li><a href="/register/" class="skel-layers-ignoreHref"><span>Register</span></a></li>
+                                    <li><a href="/auth/login/google-oauth2/"><span>Login with Google</span></a></li>									
 								{% endif %}			         
 							</ul>
 						</nav>
