--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -14,7 +14,7 @@
 		<header>
 			<h2 class="alt">Welcome back, {{ user_teacher.firstname }}</a></h2>
 			<p>The community values your opinion.
-				Please remember to <a href="/treasure/me/#myratings">rate</a> the resources you download.</p>
+				Please remember to <a href="me/#myratings">rate</a> the resources you download.</p>
 		</header>
 		<footer>
 			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
@@ -44,7 +44,7 @@
                 <tbody>
                     {% for resource in MyResources %}                        
                         <tr class="studentLabel">
-                            <td><a href="/treasure/resource/{{ resource.id }}">{{ resource.name }}</a></td>
+                            <td><a href="resource/{{ resource.id }}">{{ resource.name }}</a></td>
                             <td>{{ resource.summary }}</td>
                         </tr>                        
                     {% endfor %}
@@ -57,8 +57,8 @@
 	<p>You have uploaded no resources.</a>
 	{% endif %}
     <hr>
-    <div class="span4"><a class="btn btn-block btn-primary" href="/treasure/add_file_resource">Add File Resource</a><br></div>
-    <div class="span4"><a class="btn btn-block btn-primary" href="/treasure/add_web_resource">Add Web Resource</a><br></div>
+    <div class="span4"><a class="btn btn-block btn-primary" href="add_file_resource">Add File Resource</a><br></div>
+    <div class="span4"><a class="btn btn-block btn-primary" href="add_web_resource">Add Web Resource</a><br></div>
 </div> <!-- close panel -->
 
 
@@ -79,7 +79,7 @@
                 <tbody>
                     {% for pack in MyPacks %}                        
                         <tr class="packlabel">
-                            <td><a href="/treasure/packs/{{ pack.id }}">{{ pack.name }}</a></td>
+                            <td><a href="packs/{{ pack.id }}">{{ pack.name }}</a></td>
                             <td>{{ pack.summary }}</td>
                         </tr>                        
                     {% endfor %}
@@ -91,7 +91,7 @@
 	<p>You have created no packs.</p>
 	{% endif %}
     <hr>
-    <div class="span4"><a class="btn btn-block btn-primary" href="/treasure/packs/new">Create New Pack</a><br></div>
+    <div class="span4"><a class="btn btn-block btn-primary" href="packs/new">Create New Pack</a><br></div>
 </div> <!-- close panel -->
 
 
@@ -114,10 +114,10 @@
 	                <tbody>
 	                    {% for entry in need2rate %}
 	                        <tr class="studentLabel">
-	                            <td><a href="/treasure/resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
+	                            <td><a href="resource/{{entry.resource.id }}">{{entry.resource.name}}</a></td>
 								<td>{{entry.datetime}}</td>
-                                <td>{% if entry.used %} Yes{% else %} No. <a href="/treasure/resource/{{entry.resource.id }}/use/home"> Yes?</a>{% endif %}</td>
-                                <td>{% if entry.rated %} Yes{% else %} No. <a href="/treasure/resource/{{entry.resource.id }}/rate/">Rate it</a>{% endif %}</td>
+                                <td>{% if entry.used %} Yes{% else %} No. <a href="resource/{{entry.resource.id }}/use/home"> Yes?</a>{% endif %}</td>
+                                <td>{% if entry.rated %} Yes{% else %} No. <a href="resource/{{entry.resource.id }}/rate/">Rate it</a>{% endif %}</td>
                         </tr>
                     {% endfor %}
 
@@ -126,7 +126,7 @@
         </div>
     </div> <!-- close body -->
 	{% else %}
-	<p>All downloaded resources have been rated. <a href="/treasure/explore/">Explore more</a>?</p>
+	<p>All downloaded resources have been rated. <a href="explore/">Explore more</a>?</p>
 	{% endif %}
 </div> <!-- close panel -->
 
@@ -149,7 +149,7 @@
                 <tbody>
                     {% for record in want2talkMine %}
                         <tr class="studentLabel">
-                            <td><a href="/treasure/resource/{{ record.resource.id }}">{{record.resource.name}}</a></td>
+                            <td><a href="resource/{{ record.resource.id }}">{{record.resource.name}}</a></td>
                             <td>{{record.teacher}}</td>
                             <td>{{record.comment}}</td>
                         </tr>
@@ -183,7 +183,7 @@
                 <tbody>
                     {% for record in want2talk %}
                         <tr class="studentLabel">
-                            <td><a href="/treasure/resource/{{ record.resource.id }}">{{record.resource.name}}</a>. <a href="/treasure/resource/{{ record.resource.id }}/talk/no/random">Remove</a></td>
+                            <td><a href="resource/{{ record.resource.id }}">{{record.resource.name}}</a>. <a href="resource/{{ record.resource.id }}/talk/no/random">Remove</a></td>
                             <td>{{record.resource.author}}</td>
                             <td>{% ifequal record.disable 0 %}Active{% else%}Inactive{% endifequal%}</td>
                         </tr>
@@ -193,8 +193,8 @@
              </table>
         </div>
     </div> <!-- close body -->
-    <a class="btn btn-primary pull-right" href="/treasure/resources/talk/no/">Deactivate All</a>
-    <a class="btn btn-primary pull-right" href="/treasure/resources/talk/yes/">Activate All</a>
+    <a class="btn btn-primary pull-right" href="resources/talk/no/">Deactivate All</a>
+    <a class="btn btn-primary pull-right" href="resources/talk/yes/">Activate All</a>
     {% else %}
     <p>No resources selected yet.</p>
     {% endif %}
