--- a/django_project/templates/treasure/resources.html
+++ b/django_project/templates/treasure/resources.html
@@ -9,7 +9,7 @@
 
 {% block body_block %}
 <div class="span12">
-    <div class="row">
+    <div class="row" id="toprow">
     <div class="span9 hero-unit container panel panel-default">
         <div class="row panel-heading clearfix">
         <h3>Resources</h3>
