--- a/django_project/templates/registration/password_reset_confirm.html
+++ b/django_project/templates/registration/password_reset_confirm.html
@@ -34,7 +34,7 @@
         {% else %}
             <h3>Password reset unsuccessful</h3>
             <p>The password reset link was invalid, possibly because it has already been used.<br>
-            <a href="/treasure/password_reset/">Please request a new password reset</a>.</p>
+            <a href="/password_reset/">Please request a new password reset</a>.</p>
             
         {% endif %}
     </div>
