--- a/django_project/templates/treasure/add_file_resource.html
+++ b/django_project/templates/treasure/add_file_resource.html
@@ -13,7 +13,7 @@
     <h2>Upload a File Resource</h2>
     <br/>
     <div class="container">
-        <form class="span6" id="upload_form" method="post" action="/treasure/add_file_resource/" enctype="multipart/form-data">
+        <form class="span6" id="upload_form" method="post" action="/add_file_resource/" enctype="multipart/form-data">
 	
 	        {% csrf_token %}
 	    
