--- a/django_project/templates/treasure/add_tag.html
+++ b/django_project/templates/treasure/add_tag.html
@@ -13,7 +13,7 @@
     <h2>Add a Tag</h2>
     <br/>
     <div class="container">
-        <form class="span6" id="upload_form" method="post" action="/treasure/tags/new/">
+        <form class="span6" id="upload_form" method="post" action="/tags/new/">
 	
 	    {% csrf_token %}
 	    
