--- a/django_project/templates/treasure/explore.html
+++ b/django_project/templates/treasure/explore.html
@@ -18,7 +18,7 @@
 						{% if forloop.counter0|divisibleby:"2" %}
 			              <li class="span4">
 						{% endif %}
-			                <button class="thumbnail" onclick="location.href ='/treasure/packs/{{ pack.id }}';">
+			                <button class="thumbnail" onclick="location.href ='/packs/{{ pack.id }}';">
 			                  <img src="{{pack.image}}" style="width: 300px; height: 200px;" data-src="holder.js/300x200" alt="300x200">
 			                  <div class="caption">
 			                    <h3>{{pack.name}}</h3>
