--- a/django_project/templates/registration/password_reset_email.html
+++ b/django_project/templates/registration/password_reset_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
-You're receiving this e-mail because you requested a password reset for your user account at Treasure.
+You're receiving this e-mail because you requested a password reset for your user account at Plan C - Sharing.
 
 Please go to the following page and choose a new password:
 {% block reset_link %}
@@ -10,6 +10,6 @@ Your username, in case you've forgotten: {{ user.username }}
 
 Thanks for using our site!
 
-Treasure.
+Plan C.
 
 {% endautoescape %}
