--- a/django_project/templates/treasure/add_pack.html
+++ b/django_project/templates/treasure/add_pack.html
@@ -13,7 +13,7 @@
     <h2>Create a Pack</h2>
     <br/>
     <div class="container">
-        <form class="span6" id="upload_form" method="post" action="/treasure/packs/new/{% if resource_id %}{{ resource_id }}/{% endif %}">
+        <form class="span6" id="upload_form" method="post" action="/packs/new/{% if resource_id %}{{ resource_id }}/{% endif %}">
 	
 	        {% csrf_token %}
 	    
