--- a/django_project/templates/treasure/tags.html
+++ b/django_project/templates/treasure/tags.html
@@ -11,7 +11,7 @@
     <div class="container">
                 
         <h2>Tags</h2>
-        <a class="btn btn-primary" href="/treasure/tags/new/">Add New Tag</a>
+        <a class="btn btn-primary" href="/tags/new/">Add New Tag</a>
         
         <hr>
         
@@ -19,7 +19,7 @@
             <h4>Levels</h4>
             <ul>
                 {% for tag in level_tags %}
-                <li><a href="/treasure/tags/{{ tag.id }}">{{ tag.name }}</a></li>
+                <li><a href="/tags/{{ tag.id }}">{{ tag.name }}</a></li>
                 {% endfor %}
             </ul>
             <hr>
@@ -29,7 +29,7 @@
             <h4>Topics</h4>
             <ul>
                 {% for tag in topic_tags %}
-                <li><a href="/treasure/tags/{{ tag.id }}">{{ tag.name }}</a></li>
+                <li><a href="/tags/{{ tag.id }}">{{ tag.name }}</a></li>
                 {% endfor %}
             </ul>
             <hr>
@@ -40,7 +40,7 @@
             <h4>Other</h4>
             <ul>
                 {% for tag in other_tags %}
-                <li><a href="/treasure/tags/{{ tag.id }}">{{ tag.name }}</a></li>
+                <li><a href="/tags/{{ tag.id }}">{{ tag.name }}</a></li>
                 {% endfor %}
             </ul>
         </div>
