--- a/django_project/templates/treasure/tags.html
+++ b/django_project/templates/treasure/tags.html
@@ -13,9 +13,9 @@
         <h2>Tags</h2>
         <a class="btn btn-primary" href="/tags/new/">Add New Tag</a>
         
-        <hr>
+        <div class="span11"><hr></div>
         
-        <div class="span4">
+        <div class="span5" id="leveltags">
             <h4>Levels</h4>
             <ul>
                 {% for tag in level_tags %}
@@ -25,7 +25,7 @@
             <hr>
         </div>
         
-        <div class="span4">
+        <div class="span5" id="topictags">
             <h4>Topics</h4>
             <ul>
                 {% for tag in topic_tags %}
@@ -35,9 +35,9 @@
             <hr>
         </div>
         
-        <div class="span4">
+        <div class="span5" id="othertags">
             
-            <h4>Other</h4>
+            <h4>Other Tags</h4>
             <ul>
                 {% for tag in other_tags %}
                 <li><a href="/tags/{{ tag.id }}">{{ tag.name }}</a></li>
